[gd_scene load_steps=4 format=3 uid="uid://cyue0x6jdjf1u"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_sug7c"]
[ext_resource type="PackedScene" uid="uid://bhi2ny841eb" path="res://scenes/enemy.tscn" id="2_i7lt3"]
[ext_resource type="PackedScene" uid="uid://u7d0c2vkkbue" path="res://scenes/player.tscn" id="3_maosx"]

[node name="Main" type="Node"]
script = ExtResource("1_sug7c")
enemy_scene = ExtResource("2_i7lt3")

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(720, 480)

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("3_maosx")]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
